--- a/VirusCSS.css
+++ b/VirusCSS.css
@@ -11,7 +11,7 @@ body {
     text-align: left;
     padding: 4px;
     font-family: sans-serif;
-    width: 100%;
+    width: 100pw;
 }
 .textColor {
     color:white;
@@ -19,5 +19,33 @@ body {
 .body {
     text-align: left;
     color:white;
-    width: 750px;
+    width: 100pw;
+}
+
+#navbar {
+  overflow: hidden;
+  background-color: #333;
+}
+
+#navbar a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px;
+  text-decoration: none;
+}
+
+.content {
+  padding: 16px;
+}
+
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100pw;
+}
+
+.sticky + .content {
+  padding-top: 60px;
 }
