--- a/VirusCSS.css
+++ b/VirusCSS.css
@@ -59,3 +59,13 @@ body {
 .sticky + .content {
   padding-top: 60px;
 }
+
+.imgbox {
+    display: grid;
+    height: 100%;
+}
+.center-fit {
+    max-width: 100%;
+    max-height: 100vh;
+    margin: auto;
+}
